# alpr_pca_svm

./: .gitignore  CMakeLists.txt  Makefile  PCA4SVM.xml  README.md  detection.cpp  detection.h  list.txt  main.cpp  test_pca.cpp  trainPCA4SVM.cpp
